--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "files": [
-    "base.json",
-    "nextjs.json",
-    "react-library.json"
+    "angular.json",
+    "nest.json"
   ]
 }
